--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <div class="content">
         <h1>this is content</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore hic vero laboriosam assumenda, libero saepe ut quia quibusdam porro cumque harum accusantium quos, debitis corrupti, cum ea autem. Iusto, neque!</p>
+        
     </div>
     
 </body>
