--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="content">
         <h1>this is content</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore hic vero laboriosam assumenda, libero saepe ut quia quibusdam porro cumque harum accusantium quos, debitis corrupti, cum ea autem. Iusto, neque!</p>
+        <h1>the last h2 in ust</h1>
         
     </div>
     
